# SeniorProject-Cybercab

./: README.md
robocore_control/: CMakeLists.txt  package.xml
robocore_control/bumperbot_controller/: filtered_controller.py  motion_controller.py  velocity_dispatcher.py
robocore_control/config/: bumperbot_controllers.yaml  twist_mux_locks.yaml
robocore_control/include/bumperbot_controller/: filtered_controller.hpp
robocore_control/launch/: controller.launch.py  joystick_teleop.launch.py
robocore_control/src/: filtered_controller.cpp  motion_controller.cpp  velocity_dispatcher.cpp
robocore_cpp_demos/: CMakeLists.txt  package.xml
robocore_cpp_demos/include/bumperbot_cpp_examples/: transform_calculator.hpp  turtle_motion_controller.hpp
robocore_cpp_demos/src/: config_manager.cpp  lifecycle_manager.cpp  message_broadcaster.cpp  message_listener.cpp  qos_message_sink.cpp  qos_message_source.cpp  service_consumer.cpp  service_provider.cpp  task_controller.cpp  task_executor.cpp  transform_calculator.cpp  turtle_motion_controller.cpp
robocore_hardware/: CMakeLists.txt  package.xml  robot_hardware_interface.xml
robocore_hardware/bumperbot_firmware/: imu_interface.py  serial_data_consumer.py  serial_data_provider.py
robocore_hardware/include/bumperbot_firmware/: robot_hardware_interface.hpp
robocore_hardware/launch/: hardware_interface.launch.py
robocore_hardware/src/: robot_hardware_interface.cpp  serial_data_consumer.cpp  serial_data_provider.cpp
robocore_interfaces/: CMakeLists.txt  package.xml
robocore_launcher/: CMakeLists.txt  package.xml
robocore_launcher/launch/: real_robot.launch.py  simulated_robot.launch.py
robocore_positioning/: CMakeLists.txt  package.xml
robocore_positioning/bumperbot_localization/: sensor_data_relay.py  state_estimator.py  wheel_odometry.py
robocore_positioning/config/: ekf.yaml  wheel_odometry.rviz
robocore_positioning/launch/: global_localization.launch.py  local_localization.launch.py
robocore_positioning/src/: state_estimator.cpp  wheel_odometry.cpp
robocore_utilities/: CMakeLists.txt  package.xml
robocore_utilities/bumperbot_utils/: emergency_halt.py
robocore_utilities/src/: emergency_halt.cpp
