<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>robocore_launcher</name>
  <version>0.0.0</version>
  <description>Bumperbot Bringup package</description>
  <maintainer email="robotics.student@university.edu">Robotics Student</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robocore_hardware</exec_depend>
  <exec_depend>robocore_control</exec_depend>
  <exec_depend>robocore_model</exec_depend>
  <exec_depend>robocore_positioning</exec_depend>
  <exec_depend>robocore_navigation</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>